--- a/carrinho.html
+++ b/carrinho.html
@@ -14,7 +14,7 @@
         <nav>
             <ul class="paginas">
             <img class="icone" src="./imagens/logo_panificadora_graciela.png" alt="icone de planta em um pote">
-                <li ><a href="lanchonete.html">Graciela</a></li>
+                <li ><a href="index.html">Graciela</a></li>
                 <li ><a href="cardapio.html">Cardapio</a></li>
                 <li ><a href="carrinho.html">Carrinho</a></li>
                 <li ><a href="historia.html">História</a></li>
